--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.2.0",
     "react-phone-number-input": "^3.3.9",
     "react-scripts": "5.0.1",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
