--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-dom": "^18.2.0",
     "react-phone-number-input": "^3.3.9",
     "react-scripts": "5.0.1",
+    "react-simple-typewriter": "^5.0.1",
+    "react-typed": "^2.0.12",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
